--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation "net.devh:grpc-spring-boot-starter:${springGrpcVersion}"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
+    // Swagger UI
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9")
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
